mise en page home

--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -2,6 +2,19 @@
 *{
     border: none;
     text-decoration: none;
-    color: black;
     
+}
+
+
+a{
+    color: black;
+}
+
+ul{
+    margin: 0;
+    padding: 0;
+}
+    
+li{
+    list-style: none;
 }
