--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -2,3 +2,13 @@
 *{
     box-sizing: border-box;
 }
+
+//fonts
+// @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700;900&family=Shrikhand&display=swap');
+
+body{
+    position: relative;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    color: black;
+}
