--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,8 +1,10 @@
 //This file you will create your style for buttons inside of the project
 .btn-cta{
+    font-weight: 400;
     height: 50px;
     border-radius: 25px;
-    padding: 0 45px;
+    padding: 0 25px;
     color:#fff;
-    background: linear-gradient(160deg, $secondary 0%, $primary 180%);
+    background: linear-gradient(180deg, $color-secondary -20%, $color-primary 120%);
+    box-shadow: 0 3px 6px lighten(black, 70%);
 }
