--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,1 +1,15 @@
-//This file is for create your style with relation on space of header
+header{
+    display:flex;
+    position: relative;
+    align-items:center;
+    justify-content:center;
+    width:100%;
+    height:60px;
+    box-shadow: 0px 0px 5px lighten(black, 70%);
+    z-index: 3;
+}
+.logo{
+    &__img{
+        height:30px;
+    }
+}
