--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,9 +1,16 @@
 //This file you will create your variables inside of the project
 
 //colors
-$primary: #9356DC;
-$secondary: #FF79DA;
-$tertiary: #99E2D0;
+$color-primary: #9356DC;
+$color-secondary: #FF79DA;
+$color-tertiary: #99E2D0;
+$color-lightgrey:#f6f6f6;
+$color-softgrey:#eaeaea;
+$color-grey:#7e7e7e;
+$color-darkgrey:#343434;
+$color-lightgreen:#95dccb;
+$color-green:#178665;
+
 
 //fontawesone
 $fa-font-path: "../fonts/webfonts";
