--- a/sass/main.scss
+++ b/sass/main.scss
@@ -25,11 +25,13 @@
 @import
 'components/card',
 'components/buttons',
+'components/heart',
 'components/loader',
 'components/inputs';
 
 //pages
 @import
+'pages/home',
 'pages/menu';
 
 //themes
