update before master correction

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -906,6 +906,12 @@ header {
   position: absolute;
   left: 25px;
   font-size: 1.2em;
+  cursor: pointer;
+}
+
+.return:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 .image {
