--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -2,6 +2,10 @@
     position:absolute;
     left: 25px;
     font-size: 1.2em;
+    cursor: pointer;
+    &:hover{
+        transform: scale(1.1);
+    }
 }
 
 .image{
