--- a/public/css/main.css
+++ b/public/css/main.css
@@ -521,11 +521,21 @@ header {
           align-items: center;
   width: auto;
   background: #f6f6f6;
+  cursor: pointer;
   border-radius: 15px;
   height: 75px;
   margin-left: 13PX;
   -webkit-box-shadow: 0 4px 10px #d9d9d9;
           box-shadow: 0 4px 10px #d9d9d9;
+}
+
+.notice__item:hover {
+  background: #f5edff;
+  background: #f4eefc;
+}
+
+.notice__item:hover i {
+  color: #9356DC;
 }
 
 .notice__no {
@@ -540,7 +550,6 @@ header {
   line-height: 26px;
   border-radius: 50%;
   text-align: center;
-  vertical-align: middle;
   color: white;
 }
 
@@ -573,15 +582,25 @@ header {
 
 .footer__title {
   font-family: 'Shrikhand', sans-serif;
-  font-size: 1em;
+  font-size: 1.05em;
 }
 
 .footer__list-item {
+  font-size: .9em;
   font-weight: 300;
+  margin: 10px 0;
+}
+
+.footer__list-item i {
+  width: 12px;
+  height: 12Px;
+  font-size: .85em;
+  text-align: center;
+  margin-right: 10px;
 }
 
 .footer__list-item-main {
-  font-weight: 500;
+  font-weight: 400;
 }
 
 .footer__link {
@@ -649,6 +668,11 @@ header {
           box-shadow: 0 4px 10px #d9d9d9;
 }
 
+.card__resto:hover {
+  -webkit-box-shadow: 0 4px 15px #bfbfbf;
+          box-shadow: 0 4px 15px #bfbfbf;
+}
+
 .card__img {
   width: 100%;
   height: 175px;
@@ -684,15 +708,25 @@ header {
 }
 
 .btn-cta {
+  position: relative;
   font-weight: 400;
   height: 50px;
   border-radius: 25px;
   padding: 0 25px;
   color: #fff;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(-20%, #FF79DA), color-stop(120%, #9356DC));
-  background: linear-gradient(180deg, #FF79DA -20%, #9356DC 120%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(20%, #FF79DA), color-stop(120%, #9356DC));
+  background: linear-gradient(180deg, #FF79DA 20%, #9356DC 120%);
   -webkit-box-shadow: 0 3px 6px #b3b3b3;
           box-shadow: 0 3px 6px #b3b3b3;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.btn-cta:hover {
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(-20%, #ff88de), color-stop(120%, #9b63df));
+  background: linear-gradient(180deg, #ff88de -20%, #9b63df 120%);
+  -webkit-box-shadow: 0 3px 10px #a6a6a6;
+          box-shadow: 0 3px 10px #a6a6a6;
 }
 
 .heart {
@@ -771,8 +805,8 @@ header {
   width: 100vw;
   height: 100vh;
   background: rgba(255, 223, 246, 0.8);
-  -webkit-animation: loader-show 4s linear;
-          animation: loader-show 4s linear;
+  -webkit-animation: loader-show 3s linear;
+          animation: loader-show 3s linear;
   opacity: 0%;
   z-index: -10;
 }
@@ -961,7 +995,7 @@ header {
 
 .menu__title {
   font-family: 'Shrikhand', sans-serif;
-  font-size: 1.7em;
+  font-size: 1.65em;
   margin: 0;
 }
 
@@ -1033,6 +1067,7 @@ header {
   height: 70px;
   border-radius: 20px;
   overflow: hidden;
+  cursor: pointer;
   -webkit-box-shadow: 0 4px 10px #d9d9d9;
           box-shadow: 0 4px 10px #d9d9d9;
   -webkit-transform: translatey(20px);
@@ -1040,6 +1075,11 @@ header {
   opacity: 0;
   -webkit-animation: 01s fadein ease-out forwards, 1s translate-up ease-out forwards;
           animation: 01s fadein ease-out forwards, 1s translate-up ease-out forwards;
+}
+
+.menu-card__item:hover {
+  -webkit-box-shadow: 0 4px 13px #bfbfbf;
+          box-shadow: 0 4px 13px #bfbfbf;
 }
 
 .menu-card__text {
