--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -75,10 +75,18 @@
         align-items:center;
         width:auto;
         background: $color-lightgrey;
+        cursor: pointer;
         border-radius: 15px;
         height: 75px;
         margin-left:13PX;
         box-shadow: 0 4px 10px lighten(black, 85%);
+        &:hover{
+            background: #f5edff;
+            background: lighten($color-primary, 36%);
+            & i{
+                color: $color-primary;
+            }
+        }
     }
     &__no{
         font-weight: 300;
@@ -92,7 +100,7 @@
         line-height: 26px;
         border-radius: 50%;
         text-align: center;
-        vertical-align: middle;
+        // vertical-align: bottom;
         color: white;
     }
     &__icon{
