--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -6,7 +6,7 @@
     width: 100%;
     padding: 20px;
     background: $color-darkgrey;
-    color:#ffffff;
+    color:white;
     &__title{
         font-family: 'Shrikhand', sans-serif;
         font-size: 1.05em;
@@ -26,7 +26,6 @@
     &__list-item-main{
       font-weight:400;  
     }
-
     &__link{
       color:#fff;
     }
