--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,6 +1,6 @@
-//This file you will create your variables inside of the project
+/* variables css */
 
-//colors
+/* colors */
 $color-primary: #9356DC;
 $color-secondary: #FF79DA;
 $color-tertiary: #99E2D0;
@@ -10,7 +10,3 @@ $color-grey:#7e7e7e;
 $color-darkgrey:#343434;
 $color-lightgreen:#95dccb;
 $color-green:#178665;
-
-
-//fontawesone
-$fa-font-path: "../fonts/webfonts";
