--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,14 +1,9 @@
-//This file you will create your base style inside of the project
+/* base css */
+
 *{
     box-sizing: border-box;
 }
 
-//fonts
-// @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700;900&family=Shrikhand&display=swap');
-
 body{
     position: relative;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 500;
-    color: black;
 }
