--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -1,8 +1,8 @@
-//This file you will create your style base of reset inside of the project
+/* reset css */
+
 *{
     border: none;
     text-decoration: none;
-    
 }
 
 
