--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -1,3 +1,6 @@
+/* menu pages css */
+
+/* home return icon */
 .return{
     position:absolute;
     left: 25px;
@@ -8,6 +11,7 @@
     }
 }
 
+/* banner picture */
 .image{
     width: 100%;
     height: 220px;
@@ -16,11 +20,14 @@
     & .menu-img{
     width: 100%;
     height: 270px;
-    object-fit: cover;
-    object-position: top;
+    -o-object-fit: cover;
+       object-fit: cover;
+    -o-object-position: top;
+       object-position: top;
     }
 }
 
+/* menu section */
 .menu{
     display:flex;
     flex-flow:column nowrap;
@@ -53,13 +60,12 @@
     }
 }
 
+/* menu list */
 .menu-card{
     position: relative;
     width: 100%;
-    
     display: flex;
     flex-direction: column;
-
     &__title:after{
         display: block;
         content:'';
@@ -74,11 +80,11 @@
         font-size: 1.0em;
         font-weight: 200;
         text-transform: uppercase;
-
         opacity: 0;
-        animation: 0.5s fadein forwards;
+        -webkit-animation: 0.5s fadein forwards;
+                animation: 0.5s fadein forwards;
     }
-    & ul{
+    &__list{
         // remplacer plar la class: .menu-card__list
         display:flex;
         flex-flow:column nowrap;
@@ -93,15 +99,22 @@
         overflow: hidden;
         cursor: pointer;
         box-shadow: 0 4px 10px lighten(black, 85%);
-        
         transform: translatey(20px);
         opacity: 0;
-        animation: 01s fadein ease-out forwards, 1s translate-up ease-out forwards;
-
-        &:hover{
+        -webkit-animation: 01s fadein ease-out forwards, 1s translate-up ease-out forwards;
+                animation: 01s fadein ease-out forwards, 1s translate-up ease-out forwards;
+        &:hover{ // hover effect
             box-shadow: 0 4px 13px lighten(black, 75%);
+            & .menu-card__check{ // hover animation
+              width:60px;
+              margin-left: 0px;
+              & i{
+                  transform: rotate(0deg);
+              }
+            }
         }
     }
+    @include menu-animation; // animation-delay settings
     &__text{
         display:flex;
         position:relative;
@@ -116,7 +129,7 @@
         text-overflow: ellipsis;
         white-space: nowrap;
         overflow: hidden;
-        font-size: 1.1em;
+        font-size: 1.05em;
         margin:0;
         font-weight: 500;
     }
@@ -125,6 +138,7 @@
         white-space: nowrap;
         overflow: hidden;
         text-align: bottom;
+        font-size: .9em;
         font-weight: 300;
     }
     &__price{
@@ -134,7 +148,7 @@
         height:100%;
         padding:10px;
         width:60px;
-        font-size:.95em;
+        font-size:.9em;
         font-weight: 500;
     }
     &__check{
@@ -156,67 +170,3 @@
         }
     }
 }
-
-/*animation item*/
-
-.menu-card__item:hover .menu-card__check{
-    width:60px;
-    margin-left: 0px;
-    & i{
-        transform: rotate(0deg);
-    }
-  }
-  
-/*Animation list*/
-@keyframes fadein {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
-  }
-  @keyframes translate-up {
-    0% {
-      transform: translatey(20px);
-    }
-    100% {
-      transform: translatey(0);
-    }
-  }
-  .menu-card:nth-of-type(1) h2 {
-    animation-delay: 0.2s;
-  }
-  .menu-card:nth-of-type(1) li:nth-of-type(1) {
-    animation-delay: 0.5s, 0.5s;
-  }
-  .menu-card:nth-of-type(1) li:nth-of-type(2) {
-    animation-delay: 0.7s, 0.7s;
-  }
-  .menu-card:nth-of-type(1) li:nth-of-type(3) {
-    animation-delay: 0.9s, 0.9s;
-  }
-  .menu-card:nth-of-type(2) h2 {
-    animation-delay: 1s;
-  }
-  .menu-card:nth-of-type(2) li:nth-of-type(1) {
-    animation-delay: 1.3s, 1.3s;
-  }
-  .menu-card:nth-of-type(2) li:nth-of-type(2) {
-    animation-delay: 1.5s, 1.5s;
-  }
-  .menu-card:nth-of-type(2) li:nth-of-type(3) {
-    animation-delay: 1.7s, 1.7s;
-  }
-  .menu-card:nth-of-type(3) h2 {
-    animation-delay: 1.8s;
-  }
-  .menu-card:nth-of-type(3) li:nth-of-type(1) {
-    animation-delay: 2.1s, 2.1s;
-  }
-  .menu-card:nth-of-type(3) li:nth-of-type(2) {
-    animation-delay: 2.3s, 2.3s;
-  }
-  .menu-card:nth-of-type(3) li:nth-of-type(3) {
-    animation-delay: 2.5s, 2.5s;
-  }
