--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -6,4 +6,14 @@
 
 body{
     position: relative;
+    min-height:100vh;
+    display:flex;
+    flex-flow: column nowrap;
+    align-content: space-between;
+}
+
+main {
+    position: relative;
+    overflow: hidden;
+    flex-grow:2;
 }
