--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -7,8 +7,19 @@ header{
     justify-content:center;
     width:100%;
     height:60px;
+    background-color: white;
     box-shadow: 0px 0px 5px lighten(black, 70%);
     z-index: 3;
+}
+
+nav{
+    display:flex;
+    position: relative;
+    align-items:center;
+    justify-content:center;
+    width:100%;
+    max-width:1200px;
+    height:100%;
 }
 
 .logo{
