--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -41,6 +41,10 @@
         text-align:center;
         width: 250px;
         margin: 0;
+        // tablet mode
+        @media (min-width: 769px) {
+            width:100%;
+        }
     }
     &__description{
         font-size:1.15em;
@@ -48,6 +52,10 @@
         text-align:center;
         width: 320px;
         margin: 15px 0;
+        // tablet mode
+        @media (min-width: 769px) {
+            width:100%;
+        }
     }
     &__btn{
         display: block;
@@ -60,18 +68,35 @@
 .notice{
     display: flex;
     flex-direction: column;
+    background:white;
     position: relative;
     width: 100%;
     overflow: hidden;
     padding: 50px 20px;
+    // Desktop mode
+    @media (min-width: 993px){
+        max-width:1200px;
+        margin: 0 auto;
+    }
     &__title{
         font-weight: 500;
         margin: 0 0 20px 0;
+        // tablet mode
+        @media (min-width: 769px) {
+            flex-direction: row;
+            text-align: center;
+            margin-bottom:40px;
+        }
     }
     &__list{
         display:flex;
         flex-direction: column;
         gap:25px;
+        // tablet mode
+        @media (min-width: 769px) {
+            flex-direction: row;
+            justify-content: space-between;
+        }
     }
     &__item{
         display:flex;
@@ -91,6 +116,14 @@
                 color: $color-primary;
             }
         }
+        // tablet mode
+        @media (min-width: 769px) {
+            // flex-direction: column;
+            display: block;
+            width: 100%;
+            text-align: center;
+            height: 100px;
+        }
     }
     &__no{
         font-weight: 300;
@@ -105,6 +138,10 @@
         border-radius: 50%;
         text-align: center;
         color: white;
+        // tablet mode
+        @media (min-width: 769px) {
+            top:-13px;
+        }
     }
     &__icon{
         width: 20px;
@@ -113,8 +150,21 @@
         text-align: center;
         vertical-align: middle;
         color: $color-grey;
+        // tablet mode
+        @media (min-width: 769px) {
+            display: block;
+            width: 100%;
+            // text-align: center;
+            margin: 20px auto;
+        }
     }
     &__text{
         font-weight: 400;
+        // tablet mode
+        @media (min-width: 769px) {
+            display: block;
+            width: 100%;
+            text-align: center;
+        }
     }
 }
