--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -17,6 +17,10 @@
     height: 220px;
     position: relative;
     z-index: -1;
+    //desktop mode
+    @media (min-width: 993px) {
+        position: absolute;
+    }
     & .menu-img{
     width: 100%;
     height: 270px;
@@ -24,6 +28,10 @@
        object-fit: cover;
     -o-object-position: top;
        object-position: top;
+       //desktop mode
+       @media (min-width: 993px) {
+           height:100vh;
+       }
     }
 }
 
@@ -33,14 +41,27 @@
     flex-flow:column nowrap;
     width: 100%;
     background: $color-lightgrey;
-    border-radius: 35px;
+    border-radius: 35px 35px 0 0 ;
     padding: 40px 20px;
     gap:30px;
+    //desktop mode
+    @media (min-width: 993px) {
+        flex-flow:row wrap;
+        justify-content: space-around;
+        width:90%;
+        max-width:1200px;
+        margin: 50px auto;
+        border-radius: 35px ;
+    }
     &__title-bloc{
         display: flex;
         flex-flow: row nowrap;
         justify-content: space-between;
         padding-right: 20px;
+        //desktop mode
+        @media (min-width: 993px) {
+            width:100%;
+        }
     }
     &__title{
         font-family: 'Shrikhand', sans-serif;
@@ -51,11 +72,14 @@
         display:flex;
         flex-flow:column nowrap;
         gap:15px;
+        //desktop mode
+        @media (min-width: 993px) {
+            gap:30px;
+        }
     }
     &__btn{
         // width: 185px;
         padding: 0 50px;
-        // align-self: center;
         margin:15px auto;
     }
 }
@@ -66,6 +90,9 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+    @media (min-width: 993px) {
+        width:30%;
+    }
     &__title:after{
         display: block;
         content:'';
