--- a/public/css/main.css
+++ b/public/css/main.css
@@ -873,47 +873,47 @@ nav {
           transform: scale(1);
 }
 
-.loader .loader__animation span {
+.loader .loader__animation div {
   -webkit-animation: 0.9s wave ease-in-out infinite;
   animation: 0.9s wave ease-in-out infinite;
 }
 
-.loader .loader__animation span:nth-of-type(1) {
+.loader .loader__animation div:nth-of-type(1) {
   -webkit-animation-delay: 0s;
   animation-delay: 0s;
 }
 
-.loader .loader__animation span:nth-of-type(2) {
+.loader .loader__animation div:nth-of-type(2) {
   -webkit-animation-delay: 0.1s;
   animation-delay: 0.1s;
 }
 
-.loader .loader__animation span:nth-of-type(3) {
+.loader .loader__animation div:nth-of-type(3) {
   -webkit-animation-delay: 0.2s;
   animation-delay: 0.2s;
 }
 
-.loader .loader__animation span:nth-of-type(4) {
+.loader .loader__animation div:nth-of-type(4) {
   -webkit-animation-delay: 0.3s;
   animation-delay: 0.3s;
 }
 
-.loader .loader__animation span:nth-of-type(5) {
+.loader .loader__animation div:nth-of-type(5) {
   -webkit-animation-delay: 0.4s;
   animation-delay: 0.4s;
 }
 
-.loader .loader__animation span:nth-of-type(6) {
+.loader .loader__animation div:nth-of-type(6) {
   -webkit-animation-delay: 0.5s;
   animation-delay: 0.5s;
 }
 
-.loader .loader__animation span:nth-of-type(7) {
+.loader .loader__animation div:nth-of-type(7) {
   -webkit-animation-delay: 0.6s;
   animation-delay: 0.6s;
 }
 
-.loader .loader__animation span:nth-of-type(8) {
+.loader .loader__animation div:nth-of-type(8) {
   -webkit-animation-delay: 0.7s;
   animation-delay: 0.7s;
 }
